<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.format.DateUtils" />

        <variable
            name="viewModel"
            type="com.example.pantomime.ui.gamepage.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/motionTelltales"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.gamepage.GameFragment">

        <TextView
            android:id="@+id/textView4"
            style="@style/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kalame_morede_nazar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/txt_keyword"
            style="@style/text_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.word}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />


        <TextView
            android:id="@+id/txt_score"
            style="@style/text_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/score(viewModel.score)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_keyword" />

        <Button
            android:id="@+id/btn_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewModel.onCorrect()}"
            android:text="@string/correct"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_wrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:onClick="@{() -> viewModel.onWrong()}"
            android:text="@string/wrong"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{DateUtils.formatElapsedTime(viewModel.currentTime)}"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/txt_score"
            app:layout_constraintStart_toStartOf="@+id/txt_score"
            app:layout_constraintTop_toBottomOf="@+id/txt_score" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>